--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ localProperties.load(new FileInputStream(rootProject.file("local.properties")))
 
 android {
 
-    compileSdk 30
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.virgiliosolano.moviedb"
@@ -25,7 +25,9 @@ android {
 
     buildTypes {
         debug {
-            buildConfigField("String", "MOVIE_API_KEY", "\"" + localProperties['movieApiKey'] + "\"")
+            buildConfigField("String", "TMDB_API_KEY", "\"" + localProperties['movieApiKey'] + "\"")
+            buildConfigField("String", "TMDB_POSTER_URL", "\"" + "https://image.tmdb.org/t/p/original" + "\"")
+            buildConfigField("String", "TMDB_BASE_URL", "\"" + "https://api.themoviedb.org/3" + "\"")
         }
         release {
             minifyEnabled false
@@ -52,11 +54,48 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.4.0'
+
+    def activity_version = "1.4.0"
+
+    // Kotlin
+    implementation "androidx.activity:activity-ktx:$activity_version"
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //Room
+    def roomVersion = "2.3.0"
+    implementation("androidx.room:room-runtime:$roomVersion")
+    annotationProcessor("androidx.room:room-compiler:$roomVersion")
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation("androidx.room:room-ktx:$roomVersion")
+
+
+
     // Hilt dependency
     implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    // When using Kotlin.
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+    // When using Java.
+    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
