--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+
+import com.google.gson.annotations.SerializedName
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -26,10 +28,13 @@ android {
     buildTypes {
         debug {
             buildConfigField("String", "TMDB_API_KEY", "\"" + localProperties['movieApiKey'] + "\"")
-            buildConfigField("String", "TMDB_POSTER_URL", "\"" + "https://image.tmdb.org/t/p/original" + "\"")
-            buildConfigField("String", "TMDB_BASE_URL", "\"" + "https://api.themoviedb.org/3" + "\"")
+            buildConfigField("String", "TMDB_POSTER_URL", "\"" + "https://image.tmdb.org/t/p/original/" + "\"")
+            buildConfigField("String", "TMDB_POSTER_MEDIUM_URL", "\"" + "https://image.tmdb.org/t/p/w500" + "\"")
+            buildConfigField("String", "TMDB_BASE_URL", "\"" + "https://api.themoviedb.org/3/" + "\"")
+            debuggable true
         }
         release {
+            debuggable false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
@@ -59,6 +64,9 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.material:material:1.4.0'
 
+    //cardview
+
+
     def activity_version = "1.4.0"
 
     // Kotlin
@@ -76,24 +84,42 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     //Room
-    def roomVersion = "2.3.0"
+    /*def roomVersion = "2.3.0"
     implementation("androidx.room:room-runtime:$roomVersion")
     annotationProcessor("androidx.room:room-compiler:$roomVersion")
     // optional - Kotlin Extensions and Coroutines support for Room
-    implementation("androidx.room:room-ktx:$roomVersion")
+    implementation("androidx.room:room-ktx:$roomVersion")*/
 
+    implementation "androidx.room:room-runtime:2.2.5"
+    kapt "androidx.room:room-compiler:2.2.5"
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.2.5"
 
 
     // Hilt dependency
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    implementation "com.google.dagger:hilt-android:2.40.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.40.1"
 
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
-    // When using Kotlin.
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
-    // When using Java.
-    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+    // Hilt ViewModel
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // OkHttp
+    // define a BOM and its version
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("com.squareup.okhttp3:logging-interceptor")
+
+    //testImplementation("com.squareup.okhttp3:mockwebserver:4.9.0")
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
